--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-/* OopisOS v4.0: Main Style Sheet */
+/* OopisOS v4.6 Main Style Sheet */
 
 /* Design Tokens (Root Variables)
 /* ========================================================================== */
